--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ openai==1.9.0
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.4
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pyactiveresource==2.2.2
 pydantic==2.5.3
 pydantic_core==2.14.6
