--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.6.0
 anyio==4.2.0
 app==0.0.1
 attrs==23.2.0
+bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
 certifi==2023.11.17
@@ -12,6 +13,7 @@ click==8.1.7
 dill==0.3.7
 distro==1.9.0
 Flask==3.0.1
+Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
