--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ distro==1.9.0
 Flask==3.0.1
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 forex-python==1.8
