--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 anyio==4.2.0
 bcrypt==4.1.2
+beautifulsoup4==4.12.3
 blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -29,6 +30,7 @@ pydantic_core==2.16.1
 requests==2.31.0
 simplejson==3.19.2
 sniffio==1.3.0
+soupsieve==2.5
 SQLAlchemy==2.0.25
 tqdm==4.66.1
 typing_extensions==4.9.0
